[gd_scene load_steps=4 format=3 uid="uid://yiihlos35uty"]

[ext_resource type="PackedScene" uid="uid://cc4en3bgqnuir" path="res://addons/BitmapTileCollision/Editor/Dock/bitmap_menu.tscn" id="1_ae31u"]
[ext_resource type="Script" path="res://addons/BitmapTileCollision/Editor/Dock/dock.gd" id="1_q7eqh"]
[ext_resource type="PackedScene" uid="uid://envugburucq1" path="res://tile_data.tscn" id="2_mme66"]

[node name="Dock" type="Control"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7eqh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="VBoxContainer/TopBar"]
layout_mode = 2
clip_tabs = false
tab_count = 2
tab_0/title = "Create"
tab_1/title = "Paint"

[node name="Label" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "Create tiles"

[node name="CreateMenu" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CreateMenu"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/CreateMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/CreateMenu/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(240, 320)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/CreateMenu/VBoxContainer/ScrollContainer/HFlowContainer"]
layout_mode = 2
text = "test"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CreateMenu/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/CreateMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "New"

[node name="Button2" type="Button" parent="VBoxContainer/CreateMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import"

[node name="Button3" type="Button" parent="VBoxContainer/CreateMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="BitmapMenu" parent="VBoxContainer/CreateMenu" instance=ExtResource("1_ae31u")]
layout_mode = 2

[node name="TileData" parent="VBoxContainer/CreateMenu" instance=ExtResource("2_mme66")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaintMenu" type="HSplitContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PaintMenu"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/PaintMenu/ScrollContainer"]
custom_minimum_size = Vector2(240, 320)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/PaintMenu/ScrollContainer/HFlowContainer"]
layout_mode = 2
text = "test"

[node name="Button" type="Button" parent="VBoxContainer/PaintMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "click me"

[connection signal="tab_changed" from="VBoxContainer/TopBar/TabBar" to="." method="_on_tab_bar_tab_changed"]
